--- a/webAPI/backend/backend.csproj
+++ b/webAPI/backend/backend.csproj
@@ -1,39 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>e90a64f8-a481-4ff6-806d-64d40d95500f</UserSecretsId>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="CodeTemplates\**" />
-    <Compile Remove="Controllers\**" />
-    <Compile Remove="DbContext\**" />
-    <Compile Remove="Entities\**" />
-    <Compile Remove="IServices\**" />
-    <Compile Remove="Models\**" />
-    <Compile Remove="Services\**" />
-    <Content Remove="CodeTemplates\**" />
-    <Content Remove="Controllers\**" />
-    <Content Remove="DbContext\**" />
-    <Content Remove="Entities\**" />
-    <Content Remove="IServices\**" />
-    <Content Remove="Models\**" />
-    <Content Remove="Services\**" />
-    <EmbeddedResource Remove="CodeTemplates\**" />
-    <EmbeddedResource Remove="Controllers\**" />
-    <EmbeddedResource Remove="DbContext\**" />
-    <EmbeddedResource Remove="Entities\**" />
-    <EmbeddedResource Remove="IServices\**" />
-    <EmbeddedResource Remove="Models\**" />
-    <EmbeddedResource Remove="Services\**" />
-    <None Remove="CodeTemplates\**" />
-    <None Remove="Controllers\**" />
-    <None Remove="DbContext\**" />
-    <None Remove="Entities\**" />
-    <None Remove="IServices\**" />
-    <None Remove="Models\**" />
-    <None Remove="Services\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <None Remove=".gitignore" />
@@ -45,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.4.2" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
       <PrivateAssets>all</PrivateAssets>
