fixes abd dependencies updates

--- a/webAPI/backend/appsettings.Development.json
+++ b/webAPI/backend/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Jwt": {
+    "Key": "b7f5d9e8a3c2f1d6e4c8a7b2d9f5c3e7"
+  },
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Database=ViitorStudent;Trusted_Connection=True;"
+  },
+  "Images": {
+    "Path":  "Images" 
+  } 
 }
